Create class Operand Create class Factory First succes start

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
 project(Abstract_VM)
-ADD_COMPILE_OPTIONS(-Wall -Wextra -Werror, -Wunused-variable)
-set(CMAKE_CXX_STANDARD 14)
+ADD_COMPILE_OPTIONS(-Wall -Wextra -Werror)
+set(CMAKE_CXX_STANDARD 17)
 AUX_SOURCE_DIRECTORY(./srcs SRCS)
+INCLUDE_DIRECTORIES(./includes)
 add_executable(Abstract_VM ${SRCS})
