make color output make multifiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_STANDARD 17)
 AUX_SOURCE_DIRECTORY(./srcs SRCS)
 INCLUDE_DIRECTORIES(./includes)
 add_executable(Abstract_VM ${SRCS})
+set(ENV{TERM} "xterm-256color")
